<resources>
    <string name="app_name">手势识别与唤醒技术</string>
    <string name="gestures_loading">载入手势集</string>
    <string name="gesture_add_button">增加</string>
    <string name="gesture_add_reload">重载</string>
    <string name="gesture_add_perform">验证</string>
    <string name="gesture_name">名称</string>
    <string name="comfrim_button">确认</string>
    <string name="discard_button">取消</string>
    <string name="error_missing_name">请输入名称！</string>
    <string name="save_success">手势保存于 %s</string>
    <string name="gestures_empty">空</string>
    <string name="gesture_delete_success">手势删除成功</string>
    <string name="gesture_rename_title">重命名手势</string>
    <string name="gesture_rename">重命名</string>
    <string name="gesture_delete">删除</string>
    <string name="gesture_rename_label">手势名称</string>
    <string name="cancel_action">取消</string>
    <string name="rename_action">确定</string>
    <string name="gestures_error_loading">不能加载 %s. 请确保手势库有效.</string>
    <string name="no_match_gesture">没有匹配的手势</string>
    <string name="load_gesture_success">手势文件已经装载</string>
    <string name="load_gesture_failed">手势文件装载失败</string>
    <string name="safeSet">安全手势设置</string>
    <string name="appSet">应用程序关联设置</string>
    <string name="return_main">返回</string>
    <string name="title_activity_link_app">LinkAppActivity</string>
    <string name="app_list_page">应用程序手势列表页面</string>
    <string name="app_link_page">应用程序关联设置</string>
    <string name="app_link_success">应用程序关联成功</string>
    <string name="app_link_canel">应用程序关联取消</string>
    <string name="gesture_add_page">应用程序手势新增页面</string>
</resources>
